Fixed z-index

--- a/next-app/styles/molecules/Navbar.module.scss
+++ b/next-app/styles/molecules/Navbar.module.scss
@@ -21,5 +21,4 @@ $text: "Roboto", sans-serif;
     
     background: $alpha;
     box-shadow: 0px -0.5px 0px rgba(0, 0, 0, 0.3);
-    z-index: -2;
 }
